packages/miniquery/src/mikro-orm/miniquery.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/



/* eslint-disable @typescript-eslint/interface-name-prefix,@typescript-eslint/no-empty-interface,no-case-declarations,no-control-regex,prefer-const */
// ts-nocheck
const pick = (obj, keys) => keys.reduce((o, k) => (o[k] = obj[k], o), {})
// https://mikro-orm.io/docs/query-conditions
const OPERATORS = {
  ">=":"$gte",
  "<=":"$lte",
  ">":"$gt",
  "<":"$lt",
  // ":":"$eq",// fixme has
  "=":"$eq",
  "==":"$eq",
  "===":"$eq",
  "<>":"$ne",
  "!=":"$ne",
  "in":"$in",
  "not in":"$nin",
  '&&':'$and',
  'and':'$and',
  '||':'$or',
  'or':'$or',
  'nor':'$nor',
  '!' : '$not',
  '~' : '$re',
  'like' : '$like',
  'ilike' : '$ilike',
  // https://www.postgresql.org/docs/current/functions-json.html
  '@>' : '$contains',
  '<@' : '$contained',
  // $overlap	&&
  // https://www.postgresql.org/docs/current/functions-textsearch.html
  // $fulltext
  'between': '$between',
}
// https://www.postgresql.org/docs/current/functions-array.html
const ARRAY_OPERATORS = Object.assign({'&&':'$overlap'},pick(OPERATORS,['@>','<@']))

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Main: peg$parseMain };
  var peg$startRuleFunction = peg$parseMain;

  var peg$c0 = "&&";
  var peg$c1 = "||";
  var peg$c2 = "(";
  var peg$c3 = ")";
  var peg$c4 = "!";
  var peg$c5 = "between";
  var peg$c6 = "and";
  var peg$c7 = ">=";
  var peg$c8 = "<=";
  var peg$c9 = "<>";
  var peg$c10 = "===";
  var peg$c11 = "==";
  var peg$c12 = "!=";
  var peg$c13 = "@>";
  var peg$c14 = "<@";
  var peg$c15 = "~";
  var peg$c16 = ".";
  var peg$c17 = ",";
  var peg$c18 = "[";
  var peg$c19 = "]";
  var peg$c20 = "in";
  var peg$c21 = "IN";
  var peg$c22 = "is";
  var peg$c23 = "IS";
  var peg$c24 = "like";
  var peg$c25 = "LIKE";
  var peg$c26 = "ilike";
  var peg$c27 = "ILIKE";
  var peg$c28 = "BETWEEN";
  var peg$c29 = "AND";
  var peg$c30 = "not";
  var peg$c31 = "NOT";
  var peg$c32 = "or";
  var peg$c33 = "OR";
  var peg$c34 = "'";
  var peg$c35 = "\"";
  var peg$c36 = "null";
  var peg$c37 = "NULL";
  var peg$c38 = "true";
  var peg$c39 = "false";
  var peg$c40 = "TRUE";
  var peg$c41 = "FALSE";
  var peg$c42 = "/*";
  var peg$c43 = "*/";
  var peg$c44 = "--";
  var peg$c45 = "\n";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[:=]/;
  var peg$r2 = /^[a-zA-Z]/;
  var peg$r3 = /^[_a-zA-Z0-9]/;
  var peg$r4 = /^[1-9]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[^']/;
  var peg$r7 = /^[^"]/;
  var peg$r8 = /^[^*]/;
  var peg$r9 = /^[^\r\n]/;
  var peg$r10 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("&&", false);
  var peg$e1 = peg$literalExpectation("||", false);
  var peg$e2 = peg$literalExpectation("(", false);
  var peg$e3 = peg$literalExpectation(")", false);
  var peg$e4 = peg$literalExpectation("!", false);
  var peg$e5 = peg$literalExpectation("between", false);
  var peg$e6 = peg$literalExpectation("and", false);
  var peg$e7 = peg$literalExpectation(">=", false);
  var peg$e8 = peg$literalExpectation("<=", false);
  var peg$e9 = peg$literalExpectation("<>", false);
  var peg$e10 = peg$classExpectation(["<", ">"], false, false);
  var peg$e11 = peg$literalExpectation("===", false);
  var peg$e12 = peg$literalExpectation("==", false);
  var peg$e13 = peg$literalExpectation("!=", false);
  var peg$e14 = peg$classExpectation([":", "="], false, false);
  var peg$e15 = peg$literalExpectation("@>", false);
  var peg$e16 = peg$literalExpectation("<@", false);
  var peg$e17 = peg$literalExpectation("~", false);
  var peg$e18 = peg$literalExpectation(".", false);
  var peg$e19 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e20 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e21 = peg$literalExpectation(",", false);
  var peg$e22 = peg$literalExpectation("[", false);
  var peg$e23 = peg$literalExpectation("]", false);
  var peg$e24 = peg$literalExpectation("in", false);
  var peg$e25 = peg$literalExpectation("IN", false);
  var peg$e26 = peg$literalExpectation("is", false);
  var peg$e27 = peg$literalExpectation("IS", false);
  var peg$e28 = peg$literalExpectation("like", false);
  var peg$e29 = peg$literalExpectation("LIKE", false);
  var peg$e30 = peg$literalExpectation("ilike", false);
  var peg$e31 = peg$literalExpectation("ILIKE", false);
  var peg$e32 = peg$literalExpectation("BETWEEN", false);
  var peg$e33 = peg$literalExpectation("AND", false);
  var peg$e34 = peg$literalExpectation("not", false);
  var peg$e35 = peg$literalExpectation("NOT", false);
  var peg$e36 = peg$literalExpectation("or", false);
  var peg$e37 = peg$literalExpectation("OR", false);
  var peg$e38 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e39 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e40 = peg$literalExpectation("'", false);
  var peg$e41 = peg$classExpectation(["'"], true, false);
  var peg$e42 = peg$literalExpectation("\"", false);
  var peg$e43 = peg$classExpectation(["\""], true, false);
  var peg$e44 = peg$literalExpectation("null", false);
  var peg$e45 = peg$literalExpectation("NULL", false);
  var peg$e46 = peg$literalExpectation("true", false);
  var peg$e47 = peg$literalExpectation("false", false);
  var peg$e48 = peg$literalExpectation("TRUE", false);
  var peg$e49 = peg$literalExpectation("FALSE", false);
  var peg$e50 = peg$otherExpectation("whitespace");
  var peg$e51 = peg$literalExpectation("/*", false);
  var peg$e52 = peg$classExpectation(["*"], true, false);
  var peg$e53 = peg$literalExpectation("*/", false);
  var peg$e54 = peg$literalExpectation("--", false);
  var peg$e55 = peg$classExpectation(["\r", "\n"], true, false);
  var peg$e56 = peg$literalExpectation("\n", false);
  var peg$e57 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e58 = peg$anyExpectation();

  var peg$f0 = function(next) {return next};
  var peg$f1 = function(next) {return next};
  var peg$f2 = function(left, op, right) {return {op,right}};
  var peg$f3 = function(left, rest) {return rest?.right?_compound(rest?.op,left,rest?.right):left};
  var peg$f4 = function(next) {return next};
  var peg$f5 = function(next) {return {'$not':next}};
  var peg$f6 = function(field, value1, value2) { return _make(field, '$between', value1, value2); };
  var peg$f7 = function(field, op, value) {return _make(field,op,value)};
  var peg$f8 = function(field, op, value) {return _make(field,ARRAY_OPERATORS[op],value)};
  var peg$f9 = function(field, op, value) {return _make(field,op,value)};
  var peg$f10 = function(field, op) {return _make(field,'=',null)};
  var peg$f11 = function(field, op) {return _make(field,'!=',null)};
  var peg$f12 = function(field, op, value) {return _make(field,op,value)};
  var peg$f13 = function(field, op, value) {return _make(field,op,value)};
  var peg$f14 = function(a) {return a};
  var peg$f15 = function() {return text()};
  var peg$f16 = function(next) {return next || []};
  var peg$f17 = function(next) {return next};
  var peg$f18 = function(next) {return next};
  var peg$f19 = function() {return 'in'};
  var peg$f20 = function() {return 'is'};
  var peg$f21 = function() {return 'like'};
  var peg$f22 = function() {return 'ilike'};
  var peg$f23 = function() {return 'between'};
  var peg$f24 = function() {return 'and'};
  var peg$f25 = function() {return 'not'};
  var peg$f26 = function() {return 'or'};
  var peg$f27 = function() {return parseInt(text())};
  var peg$f28 = function() {return parseFloat(text())};
  var peg$f29 = function(v) {return v.join('')};
  var peg$f30 = function(v) {return v.join('')};
  var peg$f31 = function() {return null};
  var peg$f32 = function() {return text().toLowerCase() === 'true'};
  var peg$f33 = function() {return ''};
  var peg$f34 = function() {return ' '};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseMain() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseExpr();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEOF();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpr() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseCompoundExpr();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCompoundExpr() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseRelExpr();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (input.substr(peg$currPos, 2) === peg$c0) {
        s5 = peg$c0;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s5 = peg$c1;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s4 = [s4, s5, s6];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseand();
          if (s5 === peg$FAILED) {
            s5 = peg$parseor();
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCompoundExpr();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2;
          s2 = peg$f2(s1, s3, s4);
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f3(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRelExpr() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpr();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 33) {
        s1 = peg$c4;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseRelExpr();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseField();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse__();
          if (s2 !== peg$FAILED) {
            if (input.substr(peg$currPos, 7) === peg$c5) {
              s3 = peg$c5;
              peg$currPos += 7;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parse__();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseliteral();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse__();
                  if (s6 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c6) {
                      s7 = peg$c6;
                      peg$currPos += 3;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e6); }
                    }
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parse__();
                      if (s8 !== peg$FAILED) {
                        s9 = peg$parseliteral();
                        if (s9 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s0 = peg$f6(s1, s5, s9);
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseField();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (input.substr(peg$currPos, 2) === peg$c7) {
              s3 = peg$c7;
              peg$currPos += 2;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s3 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c8) {
                s3 = peg$c8;
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e8); }
              }
              if (s3 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c9) {
                  s3 = peg$c9;
                  peg$currPos += 2;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e9); }
                }
                if (s3 === peg$FAILED) {
                  s3 = input.charAt(peg$currPos);
                  if (peg$r0.test(s3)) {
                    peg$currPos++;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e10); }
                  }
                  if (s3 === peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c10) {
                      s3 = peg$c10;
                      peg$currPos += 3;
                    } else {
                      s3 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e11); }
                    }
                    if (s3 === peg$FAILED) {
                      if (input.substr(peg$currPos, 2) === peg$c11) {
                        s3 = peg$c11;
                        peg$currPos += 2;
                      } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e12); }
                      }
                      if (s3 === peg$FAILED) {
                        if (input.substr(peg$currPos, 2) === peg$c12) {
                          s3 = peg$c12;
                          peg$currPos += 2;
                        } else {
                          s3 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e13); }
                        }
                        if (s3 === peg$FAILED) {
                          s3 = input.charAt(peg$currPos);
                          if (peg$r1.test(s3)) {
                            peg$currPos++;
                          } else {
                            s3 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e14); }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              s5 = peg$parseliteral();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f7(s1, s3, s5);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseField();
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (input.substr(peg$currPos, 2) === peg$c13) {
                s3 = peg$c13;
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e15); }
              }
              if (s3 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c14) {
                  s3 = peg$c14;
                  peg$currPos += 2;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e16); }
                }
                if (s3 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c0) {
                    s3 = peg$c0;
                    peg$currPos += 2;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e0); }
                  }
                }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                s5 = peg$parseArray();
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f8(s1, s3, s5);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseField();
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
